# intellyweave

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ADOPTERS.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NEWSLEAK_EVOLUTION_ADDENDUM.md  PROJECT_NARRATIVE.md  README.md  SECURITY.md  SUPPORT.md  docker-compose-dot-ai.yaml  docker-compose.yaml  renovate.json
.github/: ARCHIVE_RESEARCHER.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  github_ISSUE_Quartermaster_CaseOfficer.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: stale.yml
backend/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  activate_venv.sh  docker-compose.yml  pyproject.toml
backend/.github/ISSUE_TEMPLATE/: feature_request.yml
backend/.github/workflows/: frontend_release.yml
backend/config/: archive_domains.yaml
backend/docs/: backend-architecture.md  dataset-requirements.md  remote_agents.md
backend/elysia/: config.py
backend/elysia/agents/: __init__.py  geo_transformer.py  personalization.py  query_extractor.py
backend/elysia/api/: api_types.py  app.py
backend/elysia/api/core/: log.py
backend/elysia/api/routes/: agents.py  documents.py  init.py  processor.py  query.py
backend/elysia/api/services/: document.py  document_reader_service.py  geocoding_service.py  ner_service.py  sofia_service.py  tree.py  user.py
backend/elysia/api/static/: 404.html  index.html  index.txt
backend/elysia/api/utils/: config.py  models.py  websocket.py
backend/elysia/preprocessing/: collection.py  prompt_templates.py
backend/elysia/tools/archives/: __init__.py  archive_utils.py  case_officer_tool.py  config_loader.py  constants.py  dspy_programs.py  quartermaster_tool.py  types.py
backend/elysia/tools/courthouse/: __init__.py  courthouse_debate.py  defense_agent.py  judge_agent.py  objects.py  prosecution_agent.py
backend/elysia/tools/domain/: __init__.py  custom_agent_factory.py  custom_agent_registry.py  custom_agent_store.py  objects.py  prompt_templates.py  router.py
backend/elysia/tools/intelligence/: __init__.py  extractor_agent.py  geospatial_agent.py  intelligence_orchestrator.py  mapper_agent.py  network_agent.py  objects.py  pattern_agent.py  synthesizer_agent.py
backend/elysia/tools/postprocessing/: summarise_items.py
backend/elysia/tools/retrieval/: aggregate.py  chunk.py  prompt_templates.py  query.py  util.py
backend/elysia/tools/text/: text.py
backend/elysia/tools/visualisation/: objects.py  prompt_templates.py  visualise.py
backend/elysia/tree/: objects.py  prompt_templates.py  tree.py  util.py
backend/elysia/util/: client.py  collection.py  document_parser.py  dummy_adapter.py  elysia_chain_of_thought.py  gpt5_client.py  objects.py  ocr_preprocessor.py  parsing.py  retry_handler.py  return_types.py  token_manager.py
backend/pipeline/: .env.example  Dockerfile
backend/pipeline/automation/: watchdog_ingestion.py
backend/pipeline/ingestion/: ingest_elastic_weaviate.py
backend/scripts/: delete_chunks.py  delete_collections.py  export_data.py  import_data.py  load_datasets.py
backend/tests/: conftest.py
backend/tests/no_reqs/api/: test_change_tools_nr.py
backend/tests/no_reqs/general/: test_client_local_nr.py  test_objects_nr.py  test_settings_nr.py  test_tree_config_nr.py  test_tree_nr.py
backend/tests/no_reqs/intelligence_analysis/: test_document_service_delegation.py  test_entity_extraction_nr.py  test_geocoding_nr.py  test_ocr_preprocessor.py
backend/tests/requires_env/: README.md  conftest.py
backend/tests/requires_env/courthouse_debate/: __init__.py  test_courthouse_debate_integration.py
backend/tests/requires_env/intelligence_analysis/: conftest.py  test_document_pipeline_integration.py  test_geocoding.py  test_orchestrator_integration.py  test_quartermaster_simple.py
backend/tests/requires_env/llm/: test_complex_prompts.py  test_docs_examples.py  test_general.py  test_generic_prompts.py
config/: searxng-limiter.toml  searxng-settings.yml
docs/: CLAUDE.md  GOVERNANCE.md  MAINTAINERS.md  ROADMAP.md  git-subtree-governance.md  roadmap.md  syncing.md
docs/architecture/: backend.md  cli.md  data-flow.md  decision-tree.md  frontend.md  index.md
docs/contributing/: development-setup.md  git-subtree.md  index.md  testing.md  upstream-syncing.md
docs/demos/: index.md
docs/demos/ingeborg-investigation/: evolution.md  index.md  platform-evolution.md  walkthrough.md
docs/demos/intellyweave-evolution/: architecture.md  index.md  platform-history.md  use-cases.md
docs/demos/rat-lines/: index.md  multimedia.md  walkthrough.md
docs/getting-started/: first-query.md  index.md  installation.md
docs/guides/agents/: custom-agents.md  index.md  (+1 more)
docs/reference/: api-endpoints.md  cli-commands.md  environment-variables.md  index.md
examples/: README.md
examples/sources/: ipotesi_da_investigare.md  piano_aggiornato_narrazione.md  revisione-podcast-episodi-1-14.md
frontend/: .env.example  .gitignore  README.md  biome.json  export.sh  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/docs/: design-system.md
frontend/hooks/: useToast.ts
frontend/lib/: documentParser.ts  utils.ts
frontend/tests/: .gitignore  README.md  intelligence-agent.interactive.spec.ts  mapbox.interactive.spec.ts  network-chart.interactive.spec.ts
scripts/: build.sh  dev.sh  kill-process.sh  setup.sh
(+206 files in other folders)
