[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "elysia-ai"
#replace_package_version_marker
version = "0.3.dev22"
description = "Elysia is an open-source agentic platform for searching data. It is built with customisation in mind, allowing you to build agents and tools that are tailored to your specific use case. It uses Weaviate as the default retrieval tools, and can interface with your data stored in a Weaviate cluster."
readme = "README.md"
authors = [
    {name = "Danny", email = "danny@weaviate.io"}
]
requires-python = ">=3.11.0,<3.13.0"
classifiers = [
    "Development Status :: 4 - Beta"
]
keywords = ["ai", "agentic", "weaviate", "retrieval", "search", "llm"]
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "apscheduler==3.11.0",
    "bcrypt>=4.3.0",
    "cleantext>=1.1.4",
    "dspy-ai>=3.0.0",
    "fastapi[standard]>=0.115.11",
    "ftfy>=6.0.0",
    "httpx==0.28.1",
    "langdetect>=1.0.9",
    "litellm>=1.74.15,<1.80.0",
    "matplotlib>=3.10.3",
    "requests==2.32.3",
    "networkx==3.3",
    "nest_asyncio==1.6.0",
    "psutil==7.0.0",
    "pympler==1.1",
    "pyspellchecker>=0.8.0",
    "pypdf>=4.0.0",
    "python-multipart==0.0.18",
    "rapidfuzz>=3.0.0",
    "rich>=13.7.1,<=14.0.0",
    "blis>=1.2.0,<1.3.0",
    "spacy==3.8.7",
    "symspellpy>=6.7.0",
    "thinc>=8.3.4,<8.4.0",
    "tiktoken>=0.7.0",
    "uvicorn[standard]==0.35.0",
    "weaviate-client>=4.16.7",
    "cryptography>=44.0.3",
    "pip>=25.2",
    "watchdog>=4.0.0"
]



[project.urls]
"Homepage" = "https://elysia.weaviate.io"
"Documentation" = "https://weaviate.github.io/elysia/"

[project.optional-dependencies]
# Core testing dependencies (lightweight, no GPU/ML libs)
test = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.2",
    "pytest-cov>=6.2.1",
    "websocket-client==1.8.0",
]

# Documentation generation
docs = [
    "mkdocs-material[imaging]==9.6.12",
    "mkdocstrings[python]==0.29.1",
    "pillow==10.4.0",
    "cairosvg==2.7.1",
]

# Named Entity Recognition with GLiNER (lightweight: ~150MB with CPU-only torch)
# Install CPU-only torch first: pip install torch --index-url https://download.pytorch.org/whl/cpu
# Then install with: pip install -e ".[ner]"
ner = [
    "gliner>=0.2.22",
]

# ML/GPU dependencies (heavy: ~2.5GB with CUDA/Torch)
ml = [
    "accelerate==1.5.2",
    "deepeval>=3.2.6",
]

# All dev dependencies combined (for convenience)
dev = [
    "elysia-ai[test]",
    "setuptools==78.1.0",
    "mypy>=1.18.0",
    "ruff>=0.14.0",
    "types-python-dateutil",
    "types-aiofiles",
    "types-requests",
    "types-psutil",
    "types-click",
    "types-ujson",
    "types-pyyaml",
    "types-beautifulsoup4",
    "types-setuptools",
    "types-html5lib",
    "types-webencodings",
    "types-Pillow"
]

[project.scripts]
elysia = "elysia.api.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["elysia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--tb=short",
    "--strict-markers",
]


[tool.ruff]
target-version = "py312"
exclude = ["**/migrations/**", "**/__pycache__/**", "**/.venv/**", "**/tests/**"]



[tool.ruff.lint]
select = [
    "E",  # actual errors (pycodestyle)
    "F",  # pyflakes (undefined variables, imports, etc.)
    "B",  # real bugs from flake8-bugbear
]
ignore = [
    "E501",   # line length
    "E402",   # module-import-not-at-top-of-file (sometimes needed)
    "E712",   # true-false-comparison (sometimes clearer)
    "F401",   # unused-import (often for re-exports in __init__.py)
    "F403",   # undefined-local-with-import-star
    "F405",   # undefined-local-with-import-star-usage
    "F541",   # f-string-missing-placeholders (style issue)
    "F841",   # unused-variable (often in except clauses)
    "B003",   # assignment-to-os-environ (sometimes needed)
    "B006",   # mutable-argument-default (common pattern)
    "B007",   # unused-loop-control-variable (often intentional)
    "B008",   # function-call-in-default
    "B035",   # static-key-dict-comprehension
    "B905",   # zip() strictness
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
python_version = "3.12"

strict = false
warn_unused_ignores = false
warn_return_any = false
warn_unused_configs = false
check_untyped_defs = false
disallow_untyped_defs = false
no_implicit_optional = false
ignore_missing_imports = true
follow_imports = "normal"  # Changed from "skip" to allow following pydantic imports
warn_no_return = false
strict_equality = false
strict_concatenate = false
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
exclude = ["stubs/", "scripts/", "tests/"]
disable_error_code = ["metaclass", "var-annotated", "annotation-unchecked", "has-type", "no-redef"]
# plugins = ["pydantic.mypy"]  # Temporarily disabled due to compatibility issues

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# Packages without py.typed markers or with incomplete types
[[tool.mypy.overrides]]
module = [
    "apscheduler",
    "apscheduler.*"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*", "stubs.*"]
ignore_errors = true
